add pypalettes to colormapping

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -862,6 +862,11 @@
       conda_channel: conda-forge
       badges: travis, codecov, pypi, conda
 
+    - repo: y-sunflower/pypalettes
+      site: https://python-graph-gallery.com/color-palette-finder/
+      badges: pypi, conda, site
+      builtons: [matplotlib]
+
 - name: Dormant projects
   intro: Tools no longer developed or endorsed by the authors.
   packages:
